# Frontiers_of_Geometric_Computation

./: .gitignore  .gitmodules
Final_Project/: .gitignore  AGENTS.md  INIT.md  README.md  pyproject.toml
Final_Project/.claude/: CLAUDE.md
Final_Project/env/: README.md  current-env.json  requirements-base.txt  requirements-cpu.txt  requirements-cuda-cu128.txt
Final_Project/milestone/: lib.typ  milestone.typ  ref.bib
Final_Project/scripts/: overfit_primitives.py  prepare_shapenetcore_category.py  record_env.py  train_generate_primitives.py  train_generate_shapenet_category.py
Final_Project/src/fgc3d/: __init__.py  data.py  device.py  experiments.py  flow_matching.py  manifold.py  metrics.py  model.py  overfit.py  sample.py  scheduler.py  shapenetcore.py  targets.py  train.py
Final_Project/tests/: test_device.py  test_experiments.py  test_flow_matching.py  test_manifold.py  test_metrics.py  test_model.py  test_overfit.py  test_primitives.py  test_scheduler.py  test_shapenetcore_prepare.py  test_targets.py  test_training.py
Homework1/: README.md  demo.py  (+2 more)
Homework3/: .gitignore  benchmark.py  hw3.md  pyproject.toml  report.md  test.py  train.py  wandb_results.json
Homework3/configs/: pointnet2_msg.yaml  pointnet2_ssg.yaml  pointnext_b.yaml  pointnext_s.yaml
Homework3/data/: modelnet40.py
Homework3/models/pointnet2/: __init__.py  pointnet2_cls.py  pointnet_util.py
Homework3/models/pointnext/: __init__.py  pointnext_cls.py
Homework3/ops/: __init__.py  ball_query.py  fps.py  group_points.py  interpolate.py  registry.py
Homework3/tests/: test_ops.py
(+16 files in other folders)
